# liboctopipes

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
clients/: octopipes_send.c  octopipes_sub.c
include/octopipes/: serializer.h  types.h
liboctopipespp/: CMakeLists.txt  README.md
liboctopipespp/include/octopipespp/: server.hpp  typespp.hpp
liboctopipespp/tests/client/: main.cpp
libs/liboctopipes/: CMakeLists.txt  README.md
libs/liboctopipes/clients/: octopipes_send.c  octopipes_sub.c
libs/liboctopipes/include/octopipes/: cap.h  octopipes.h  pipes.h  serializer.h  types.h
libs/liboctopipes/src/: cap.c  client.c  octopipes.c  pipes.c  pipes_unix.c  pipes_windows.c  serializer.c  server.c
libs/liboctopipes/tests/client/: main.c
libs/liboctopipes/tests/parser/: main.c
libs/liboctopipes/tests/pipes/: main.c
libs/liboctopipespp/: CMakeLists.txt  README.md
libs/liboctopipespp/include/octopipes/: message.hpp  octopipespp.hpp  typespp.hpp
libs/liboctopipespp/include/octopipespp/: client.hpp  message.hpp  octopipespp.hpp  typespp.hpp
libs/liboctopipespp/src/: client.cpp  message.cpp  octopipes.cpp  server.cpp
libs/liboctopipespp/tests/client/: main.cpp
libs/liboctopipespp/tests/parser/: main.cpp
libs/liboctopipespp/tests/server/: main.cpp
src/: cap.c  client.c  pipes_unix.c  pipes_windows.c  serializer.c  server.c
tests/client/: main.c
tests/pipes/: main.c
